force-app/main/default/objects/Partner_Domain_Exclusion_List__c/Partner_Domain_Exclusion_List__c.object-meta.xml
<CustomObject>
    <label>Partner Domain Exclusion List</label>
    <nameField>
        <label>Partner Domain Exclusion List Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Partner Domain Exclusion Lists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>