force-app/main/default/objects/Partner_Domain_Exclusion_List__c/fields/Domain_Name__c.field-meta.xml
<CustomField>
    <fullName>Domain_Name__c</fullName>
    <inlineHelpText>Enter the domain name to be excluded . Eg. To exclude gmail enter gmail.com</inlineHelpText>
    <label>Domain Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>