force-app/main/default/objects/Partner_Domain_Exclusion_List__c/fields/Exclude_For__c.field-meta.xml
<CustomField>
    <fullName>Exclude_For__c</fullName>
    <label>Exclude For</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All Countries</fullName>
            </value>
            <value>
                <fullName>Non GC countries</fullName>
            </value>
            <value>
                <fullName>GC countries</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>