force-app/main/default/objects/Partner_Domain_Exclusion_List__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Uncheck the checkbox to mark the record as inactive.</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>