force-app/main/default/objects/Partner_Domain_Exclusion_List__c/fields/Is_Public__c.field-meta.xml
<CustomField>
    <fullName>Is_Public__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Uncheck the checkbox to mark a domain as non-public.</inlineHelpText>
    <label>Is Public</label>
    <type>Checkbox</type>
</CustomField>